manifests/tools/registry/4-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: tools
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2.8.3
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/registry
        - name: htpasswd
          mountPath: /auth
          readOnly: true
        readinessProbe:
          httpGet:
            path: /v2/
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /v2/
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: registry-storage
      - name: htpasswd
        secret:
          secretName: registry-htpasswd
          items:
          - key: htpasswd
            path: htpasswd
